...
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgFragment">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="5dp"
...
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibtBack"
            app:layout_constraintStart_toEndOf="@+id/ibtBack"
            app:layout_constraintTop_toTopOf="@+id/ibtBack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProfileSubscriptions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack" />
...
