...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description_profile_image" />

        <TextView
            android:id="@+id/tvOfferSubscriptionUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="5dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="10"
            android:singleLine="true"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibtOfferSubscriptionRemove"
            app:layout_constraintStart_toEndOf="@+id/ivOfferSubscriptionProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibtOfferSubscriptionRemove"
            android:layout_width="40dp"
...
