...
                android:tint="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ibtOfferListCreate"
                android:contentDescription="@string/content_description_filter_offer_button" />

            <Button
                android:id="@+id/btOfferListSubscribed"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/bg_button"
                android:elevation="5dp"
                android:text="@string/edit_subscriptions"
...
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlOfferListSwipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOfferList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:elevation="3dp"
                android:paddingBottom="90dp" />

...
