...
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtBack" />

        <EditText
            android:id="@+id/etSettingsDeleteProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text"
            android:elevation="5dp"
...
            android:text="@={fragment.password}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textHint"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsDeleteProfileText" />

        <Button
            android:id="@+id/btSettingsDeleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@android:color/holo_red_light"
            android:elevation="5dp"
...
