...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            android:contentDescription="@string/content_description_offer_card_frame" />

        <ImageButton
            android:id="@+id/ibtOfferCardBookmark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:elevation="50dp"
            android:scaleType="fitCenter"
...
